Fix modals categories css on small devices

--- a/src/styles/_modal_common.scss
+++ b/src/styles/_modal_common.scss
@@ -346,7 +346,7 @@
       font-weight: $font-medium;
       cursor: pointer;
       padding: $s-1-5 $s-3;
-      margin: 0;
+      margin: $s-0-5 0;
       border-radius: $rounded-md;
       font-size: $text-sm;
       border-left: $border-2 solid transparent;
@@ -384,7 +384,7 @@
       font-weight: $font-medium;
       cursor: pointer;
       padding: $s-1-5 $s-2;
-      margin: 0;
+      margin: $s-0-5 0;
       border-radius: $rounded-md;
       font-size: $text-sm;
       text-align: center;
@@ -400,7 +400,7 @@
       }
 
       @media (max-width: $screen-xs) {
-        font-size: $text-xs;
+        font-size: $text-sm;
         padding: $s-1 $s-1-5;
       }
     }
